--- a/packages/run-extension/package.json
+++ b/packages/run-extension/package.json
@@ -5,7 +5,7 @@
   ],
   "description": "DataExa - Run Extension",
   "author": "laidx<laidx@dataexa.com>",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "files": [
     "lib",
     "src"
@@ -13,12 +13,12 @@
   "dependencies": {
     "@theia/core": "^0.4.0",
     "@theia/plugin": "^0.4.0",
-    "request": "next",
-    "util": "next"
+    "request": "^2.82.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {
-    "rimraf": "latest",
-    "typescript": "latest"
+    "rimraf": "^2.6.2",
+    "typescript": "^3.1.3"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
