--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -58,7 +58,7 @@
     "@theia/userstorage": "^0.4.0",
     "@theia/variable-resolver": "^0.4.0",
     "@theia/workspace": "^0.4.0",
-    "dataexa-run-extension": "^0.1.5"
+    "@dataexa/run-extension": "^0.2.4"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn build",
